fix: cart product list on mobile

--- a/styles/scss/gbarbosa.gbarbosa-components.scss
+++ b/styles/scss/gbarbosa.gbarbosa-components.scss
@@ -591,3 +591,9 @@
     }
   }
 }
+
+@media screen and (max-width: 768px) {
+  .cartDepartmentsProductList {
+    padding: 0;
+  }
+}
