--- a/styles/scss/gbarbosa.mega-menu.scss
+++ b/styles/scss/gbarbosa.mega-menu.scss
@@ -12,15 +12,15 @@
     }
   }
   @media (max-width: 768px) {
-    margin-right: 0;
-    padding-right: 0;
-    padding-bottom: 0;
     display: flex;
-    flex-direction: column;
+    align-items: center;
+    padding: 0;
+
     &::before {
       content: "";
       background: url("data:image/svg+xml,%3Csvg xmlns='http://www.w3.org/2000/svg' width='18' height='12' viewBox='0 0 18 12'%3E%3Cpath id='Caminho_27' data-name='Caminho 27' d='M4,18H20a1,1,0,0,0,0-2H4a1,1,0,0,0,0,2Zm0-5H14a1,1,0,0,0,0-2H4a1,1,0,0,0,0,2ZM3,7A1,1,0,0,0,4,8H20a1,1,0,0,0,0-2H4A1,1,0,0,0,3,7Z' transform='translate(-3 -6)' fill='%23ffd500'/%3E%3C/svg%3E")
         no-repeat;
+      background-position: center;
       width: 30px;
       height: 30px;
       display: flex;
