--- a/styles/scss/vtex.flex-layout.scss
+++ b/styles/scss/vtex.flex-layout.scss
@@ -260,7 +260,7 @@
 }
 .flexRowContent--main-header-mobile {
   align-items: center;
-  padding: 0 0.5rem;
+  padding: 0;
   justify-content: center;
 }
 @media screen and (max-width: 768px) {
@@ -828,6 +828,13 @@
   align-items: center;
   justify-content: center;
 }
+
+.flexRowContent--checkout-mobile-firstRow {
+  .flexCol--checkout-remove-icon {
+    justify-content: flex-start;
+  }
+}
+
 .flexCol--checkout-cart-product-name {
   :global(.vtex-product-list-0-x-productName) {
     text-overflow: ellipsis;
@@ -842,6 +849,10 @@
     overflow: hidden;
     padding: 0 25px;
     font-size: 14px;
+
+    @media screen and (max-width: em(768px)) {
+      padding: 0px;
+    }
   }
   :global(.vtex-product-list-0-x-availabilityMessageContainer) {
     background: #fff;
@@ -852,6 +863,12 @@
         font-size: 14px;
         color: #ed1d25;
       }
+    }
+  }
+
+  @media screen and (max-width: em(768px)) {
+    :global(.vtex-product-list-0-x-availabilityMessageContainer) {
+      display: none;
     }
   }
 }
@@ -879,16 +896,16 @@
 .flexCol--checkout-quantity-selector {
   max-width: 131px;
 }
-.flexColChild--checkout-product-image {
-  :global(.vtex-product-list-0-x-productImage) {
-    /*   width: 64px;
-    height: 64px; */
-  }
-}
+
 .flexRow--cart-container-mobile {
   padding: 0 5%;
   .flexRowContent--product-list-cart-container {
     border: none;
+
+    @media screen and (max-width: 768px) {
+      margin: 0;
+      padding: 0;
+    }
   }
 }
 .flexRowContent--checkout-mobile-firstRow {
@@ -904,6 +921,14 @@
   padding: 7px;
   margin: 20px 0;
 }
+
+.flexCol--checkout-product-container-mobile {
+  border: 1px solid #f3f3f3;
+  background-color: #fff;
+  padding: 7px;
+  margin: 8px 0;
+}
+
 .flexRow--right-side-orderplaced {
   height: 100%;
 }
